calico-enterprise_versioned_docs/version-3.14/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
---
title: Upgrade from Calico to Calico Enterprise on OpenShift
description: Steps to upgrade from open source Calico to Calico Enterprise on OpenShift.
openshift_manifests_ignore_installation_cr: true
---

import OpenshiftManifests from '@site/calico-enterprise_versioned_docs/version-3.14/_includes/content/_openshift-manifests.mdx';

export const Paragraph = () => {
  const cmv = '{{releases.0.calico.minor_version}}';
  const ap = '{{releases.0.calico.archive_path}}';
  const cmv_postfix = cmv + '.x';
  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
  return (
    <p>
      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release. If
      not, follow the{' '}
      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
        Calico upgrade documentation
      </a>{' '}
      before continuing.
    </p>
  );
};

## Prerequisites

<Paragraph />

Ensure your Kubernetes cluster is using the Kubernetes datastore. If you are using an `etcdv3` datastore, or the cluster doesn't have a datastore, contact Tigera Support to upgrade the datastore.

Your Kubernetes cluster must not be running in production. Operator-based upgrades from open source Calico are not recommended for production clusters due to limited testing. Also, upgrades are not tested with open source Calico prior to v3.15.

If your cluster already has {{prodname}} installed, follow the [Upgrading {{prodname}} from an earlier release guide](../upgrading-enterprise/openshift-upgrade.mdx) instead.

## Upgrade Calico to {{prodname}}

### Before you begin

**Required**

- [Configure a storage class for {{prodname}}.](../../../maintenance/logstorage/create-storage.mdx)

### Install {{prodname}}

**Download the new manifests**

Make the manifests directory.

```bash-plain-text
mkdir manifests
```

<OpenshiftManifests />

**Add an image pull secret**

<OpenShiftPullSecret />

> (Optional) If your cluster architecture requires any custom [{{prodname}} resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).

**Install {{prodname}}**

1. Apply the Tigera operators and custom resource definitions.

   ```bash-plain-text
   oc apply -f manifests/
   ```

2. (Optional) If your cluster architecture requires any custom [Calico resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).

3. Apply the custom resources for enterprise features, see [the installation reference](../../../reference/installation/api.mdx).

   ```bash-plain-text
   oc apply -f {{filesUrl}}/manifests/ocp/tigera-enterprise-resources-upgrade.yaml
   ```

4. Patch installation.

   ```bash-plain-text
   oc patch installations.operator.tigera.io default --type merge -p '{"spec":{"variant":"TigeraSecureEnterprise","imagePullSecrets":[{"name":"tigera-pull-secret"}]}}'
   ```

5. You can now monitor the upgrade progress with the following command:

   ```bash-plain-text
   watch oc get tigerastatus
   ```

Wait until the `apiserver` shows a status of `Available`, then proceed to the next section.

:::note

To troubleshoot problems, use `oc get tigerastatus -o yaml`.

:::

### Install the {{prodname}} license

Install the {{prodname}} license provided to you by Tigera.

```
oc create -f </path/to/license.yaml>
```

<OpenShiftPrometheusOperator />

You can now monitor progress with the following command:

```
watch oc get tigerastatus
```

When all components show a status of `Available`, proceed to the next section.

### Secure {{prodname}} with network policy

To secure {{prodname}} component communications, install the following set of network policies.

```bash-plain-text
oc apply -f {{filesUrl}}/manifests/ocp/tigera-policies.yaml
```
