calico-enterprise_versioned_docs/version-3.15/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
---
description: Steps to upgrade from open source Calico to Calico Enterprise on OpenShift.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.15/variables';
import CodeBlock from '@theme/CodeBlock';

# Upgrade from Calico to Calico Enterprise on OpenShift

export const Paragraph = () => {
  const cmv = '{variables.releases.0.calico.minor_version}';
  const ap = '{{releases.0.calico.archive_path}}';
  const cmv_postfix = cmv + '.x';
  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
  return (
    <p>
      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release using
      an operator-based installation. If not, follow the{' '}
      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
        Calico upgrade documentation
      </a>{' '}
      before continuing.
    </p>
  );
};

## Prerequisites

<Paragraph />

Ensure your Kubernetes cluster is using the Kubernetes datastore. If you are using an `etcdv3` datastore, or the cluster doesn't have a datastore, contact Tigera Support to upgrade the datastore.

Your Kubernetes cluster must not be running in production. Operator-based upgrades from open source Calico are not recommended for production clusters due to limited testing. Also, upgrades are not tested with open source Calico prior to v3.15.

If your cluster already has {variables.prodname} installed, follow the [Upgrading {variables.prodname} from an earlier release guide](../upgrading-enterprise/openshift-upgrade.mdx) instead.

## Upgrade Calico to {variables.prodname}

### Before you begin

**Required**

- [Configure a storage class for {variables.prodname}.](../../../operations/logstorage/create-storage.mdx)

### Install {variables.prodname}

**Download the new manifests**

Make the manifests directory.

```bash
mkdir manifests
```

<InstallOpenShiftManifests upgradeFrom='OpenSource' />

**Add an image pull secret**

<OpenShiftPullSecret />

> (Optional) If your cluster architecture requires any custom [{variables.prodname} resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).

**Install {variables.prodname}**

1. Apply the Tigera operators and custom resource definitions.

   ```bash
   oc apply --server-side --force-conflicts -f manifests/
   ```

2. (Optional) If your cluster architecture requires any custom [Calico resources](../../../reference/resources/index.mdx) to function at startup, install them now using [calicoctl](../../../reference/clis/calicoctl/overview.mdx).

3. Create the custom resources for {variables.prodname} features, see [the installation reference](../../../reference/installation/api.mdx).

   <CodeBlock language='bash'>
   oc apply -f {variables.filesUrl}/manifests/ocp/tigera-enterprise-resources.yaml
   </CodeBlock>

4. Patch installation.

   ```bash
   oc patch installations.operator.tigera.io default --type merge -p '{"spec":{"variant":"TigeraSecureEnterprise","imagePullSecrets":[{"name":"tigera-pull-secret"}]}}'
   ```

5. You can now monitor the upgrade progress with the following command:

   ```bash
   watch oc get tigerastatus
   ```

Wait until the `apiserver` shows a status of `Available`, then proceed to the next section.

:::note

To troubleshoot problems, use `oc get tigerastatus -o yaml`.

:::

### Install the {variables.prodname} license

Install the {variables.prodname} license provided to you by Tigera.

```
oc create -f </path/to/license.yaml>
```

<OpenShiftPrometheusOperator upgradeFrom='OpenSource' />

You can now monitor progress with the following command:

```
watch oc get tigerastatus
```
